--- a/vzla states.html
+++ b/vzla states.html
@@ -68,7 +68,7 @@ div.tooltip {
 
 </style>
 </head><body>
-<script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
+<script src="src/d3.v3.min.js"></script>
 <script>var _____WB$wombat$assign$function_____ = function(name) {return (self._wb_wombat && self._wb_wombat.local_init && self._wb_wombat.local_init(name)) || self[name]; };
 if (!self.__WB_pmw) { self.__WB_pmw = function(obj) { this.__WB_source = obj; return this; } }
 {
