--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         </style>
     </head>
     <body>
-        <div class="container">
-            <h1 class="mt-5 mb-4 text-center"><b>GANO VENEZUELA</b></h1>
+        <h1 class="mt-5 mb-4 text-center"><b>GANO VENEZUELA</b></h1>
+        <div class="container d-flex">
             <div class="col"><div class="card" style="width:fit-content;">
                 <div class="card-header" style="padding:5px 20px;display:flex;align-items:center;font-size:85%;justify-content: space-between;"><span style="color:#6f6f6f;">Latest results from Aug. 5</span>
                     <div style="display:flex;align-items: center;">
@@ -198,7 +198,9 @@
                     <p style="padding-left:20px;margin:0;color:#808080;"><small>*Incumbent</small></p>
                 </div>
             </div></div>
-            <div class="col"></div>
+            <div class="col-auto d-flex" style="flex-direction:column;align-content:center;justify-content:flex-start;">
+                <img src="vzla states 2024.svg" width="500px">
+            </div>
             <script>
                 function cand_un() {
                     if (document.getElementsByClassName("cand-collapsible")[0].style.display != 'table-row'){
